Use flask navbar to organise the structure of the page
Use flask navbar and enclose it in a separate module which will be used
fron the frontend module.

Also add a silly "about" page to be completed later.

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,14 +1,12 @@
 {% extends "bootstrap/base.html" %}
-{% block title %}Whiteboard{% endblock %}
+{% block title %}{{page_title}}{% endblock %}
 
 {% block navbar %}
-<div class="navbar navbar-fixed-top">
-   <!-- ... -->
-</div>
+{{nav.mynavbar.render()}}
 {% endblock %}
 
 {% block content %}
-<div>
+<div class="jumbotron">
    <!-- ... -->
    Hello world
 </div>
