Organise jinja2 templates in the current direcotry
Use a single layout template instead of many bits and pieces

--- a/templates/working-space.html
+++ b/templates/working-space.html
@@ -1,8 +1,7 @@
-{% extends "bootstrap/base.html" %}
-{% include "style.html" %}
-{% include "navbar.html" %}
-{% block title %}{{page_title}}{% endblock %}
+{% extends "layout.html" %}
 
+{% block content %}
+{{super()}}
 
 {% block content %}
 <div class="container">
