--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,7 @@
-{% extends "bootstrap/base.html" %}
-{% include "style.html" %}
-{% include "navbar.html" %}
-{% block title %}{{page_title}}{% endblock %}
-
+{% extends "layout.html" %}
 
 {% block content %}
+{{super()}}
 <div class="container">
    <div class="jumbotron">
       <div align="justify">
@@ -19,7 +16,4 @@
       </div>
    </div>
 </div>
-
-{% include "footer.html" %}
 {% endblock %}
-
