--- a/templates/search-session.html
+++ b/templates/search-session.html
@@ -1,10 +1,8 @@
-{% extends "bootstrap/base.html" %}
-{% include "style.html" %}
-{% include "navbar.html" %}
-{% block title %}{{page_title}}{% endblock %}
-
+{% extends "layout.html" %}
 
 {% block content %}
+{{super()}}
+
 <div class="container">
    <div class="jumbotron">
       <div>
