--- a/templates/working-space.html
+++ b/templates/working-space.html
@@ -1,43 +1,39 @@
 {% extends "layout.html" %}
 
+{% block scripts %}
+	{{super()}}
+   <script type="text/javascript" src="{{url_for('static', filename='js/sketch.js')}}"></script>
+   <script type="text/javascript">
+      $(function() {
+         $('#colors_sketch').sketch();
+      });
+   </script>
+{% endblock scripts %}
+
 {% block content %}
 {{super()}}
 
-   {% block scripts %}
-      {{super()}}
-      <script type="text/javascript" src="{{url_for('static', filename='js/jquery.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/sketch.js')}}"></script>
-      <script type="text/javascript">
-         $(function() {
-            $.each(['#f00', '#ff0', '#0f0', '#0ff', '#00f', '#f0f', '#000', '#fff'], function() {
-               $('#colors_demo .tools').append("<a href='#colors_sketch' data-color='" + this + "' style='width: 10px; background: " + this + ";'></a> ");
-            });
-            $.each([3, 5, 10, 15], function() {
-               $('#colors_demo .tools').append("<a href='#colors_sketch' data-size='" + this + "' style='background: #ccc'>" + this + "</a> ");
-            });
-            $('#colors_sketch').sketch();
-         });
-      </script>
-   {% endblock %}
-
 <div class="container">
    <div class="tools">
+      <div class="dropdown">
+			<button class="btn btn-default dropdown-toggle" type="button" onclick="$('#menu').show()" data-toggle="dropdown"> 
+				Stroke
+				<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+				<span class="caret"></span>
+			</button>
+			<ul id="menu" class="dropdown-menu">
+				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="3">3 pt</a></li>
+				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="5">5 pt</a></li>
+				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="10">10 pt</a></li>
+				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="15">15 pt</a></li>
+				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="20">20 pt</a></li>
+			</ul>
+      </div>
+
       <a href="#colors_sketch" data-download="png" style="float: right; width: 100px;">Download</a>
-      <a href="#colors_sketch" data-color="#f00" style="width: 10px; background: #f00;"></a>
-      <a href="#colors_sketch" data-color="#ff0" style="width: 10px; background: #ff0;"></a>
-      <a href="#colors_sketch" data-color="#0f0" style="width: 10px; background: #0f0;"></a>
-      <a href="#colors_sketch" data-color="#0ff" style="width: 10px; background: #0ff;"></a>
-      <a href="#colors_sketch" data-color="#00f" style="width: 10px; background: #00f;"></a>
-      <a href="#colors_sketch" data-color="#f0f" style="width: 10px; background: #f0f;"></a>
-      <a href="#colors_sketch" data-color="#000" style="width: 10px; background: #000;"></a>
-      <a href="#colors_sketch" data-color="#fff" style="width: 10px; background: #fff;"></a>
-      <a href="#colors_sketch" data-size="3" style="background: #ccc">3</a>
-      <a href="#colors_sketch" data-size="5" style="background: #ccc">5</a>
-      <a href="#colors_sketch" data-size="10" style="background: #ccc">10</a>
-      <a href="#colors_sketch" data-size="15" style="background: #ccc">15</a> 
    </div>
    <canvas id="colors_sketch" width="800" height="600" style="border:1px solid #000000;">
    </canvas>
 </div>
 
-{% endblock %}
+{% endblock content %}
