--- a/templates/working-space.html
+++ b/templates/working-space.html
@@ -14,23 +14,30 @@
 {{super()}}
 
 <div class="container">
-   <div class="tools">
+   <div class="btn-toolbar tools">
       <div class="dropdown">
-			<button class="btn btn-default dropdown-toggle" type="button" onclick="$('#menu').show()" data-toggle="dropdown"> 
+			<button class="btn btn-default dropdown-toggle" type="button" onclick="$('#menu').toggle()" data-toggle="dropdown"> 
 				Stroke
 				<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 				<span class="caret"></span>
 			</button>
 			<ul id="menu" class="dropdown-menu">
-				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="3">3 pt</a></li>
-				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="5">5 pt</a></li>
-				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="10">10 pt</a></li>
-				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="15">15 pt</a></li>
-				<li><a href="#colors_sketch" onclick="$('#menu').hide()" data-size="20">20 pt</a></li>
+				<li><a href="#colors_sketch" onclick="$('#menu').toggle()" data-size="3">3 pt</a></li>
+				<li><a href="#colors_sketch" onclick="$('#menu').toggle()" data-size="5">5 pt</a></li>
+				<li><a href="#colors_sketch" onclick="$('#menu').toggle()" data-size="10">10 pt</a></li>
+				<li><a href="#colors_sketch" onclick="$('#menu').toggle()" data-size="15">15 pt</a></li>
+				<li><a href="#colors_sketch" onclick="$('#menu').toggle()" data-size="20">20 pt</a></li>
 			</ul>
       </div>
-
-      <a href="#colors_sketch" data-download="png" style="float: right; width: 100px;">Download</a>
+      <a id="undo" class="btn btn-default" type="button" alt="Undo">
+         <span class="glyphicon glyphicon-repeat" style="transform: rotateY(180deg)"></span>
+      </a>
+      <a id="redo" class="btn btn-default" type="button" alt="Redo">
+         <span class="glyphicon glyphicon-repeat"></span>
+      </a>
+      <a id="download" class="btn btn-default" type="button" href="#colors_sketch" data-download="png" alt="Download Image">
+         <span class="glyphicon glyphicon-download"></span>
+      </a>
    </div>
    <canvas id="colors_sketch" width="800" height="600" style="border:1px solid #000000;">
    </canvas>
