Add undo functionality

--- a/templates/working-space.html
+++ b/templates/working-space.html
@@ -29,13 +29,13 @@
 				<li><a href="#whiteboard" onclick="$('#menu').toggle()" data-size="20">20 pt</a></li>
 			</ul>
       </div>
-      <a id="undo" class="btn btn-default" type="button" alt="Undo">
+      <a id="undo" class="btn btn-default" href="#whiteboard" data-undo="1" alt="Undo">
          <span class="glyphicon glyphicon-repeat" style="transform: rotateY(180deg)"></span>
       </a>
-      <a id="redo" class="btn btn-default" type="button" alt="Redo">
+      <a id="redo" class="btn btn-default" href="#whiteboard" alt="Redo">
          <span class="glyphicon glyphicon-repeat"></span>
       </a>
-      <a id="download" class="btn btn-default" type="button" href="#whiteboard" data-download="png" alt="Download Image">
+      <a id="download" class="btn btn-default" href="#whiteboard" data-download="png" alt="Download Image">
          <span class="glyphicon glyphicon-download"></span>
       </a>
    </div>
