Add redo functionality

--- a/templates/working-space.html
+++ b/templates/working-space.html
@@ -32,7 +32,7 @@
       <a id="undo" class="btn btn-default" href="#whiteboard" data-undo="1" alt="Undo">
          <span class="glyphicon glyphicon-repeat" style="transform: rotateY(180deg)"></span>
       </a>
-      <a id="redo" class="btn btn-default" href="#whiteboard" alt="Redo">
+      <a id="redo" class="btn btn-default" href="#whiteboard" data-redo="1" alt="Redo">
          <span class="glyphicon glyphicon-repeat"></span>
       </a>
       <a id="download" class="btn btn-default" href="#whiteboard" data-download="png" alt="Download Image">
