Add support to send updates from the javascript on a session
For the momment the session is not stored, but the board is sending
updates using ajax to the server using a simple api.

--- a/templates/working-space.html
+++ b/templates/working-space.html
@@ -5,7 +5,7 @@
    <script type="text/javascript" src="{{url_for('static', filename='js/sketch.js')}}"></script>
    <script type="text/javascript">
       $(function() {
-         $('#whiteboard').sketch();
+         $('#whiteboard').sketch("{{session_id}}");
       });
    </script>
 {% endblock scripts %}
